unpackaged/main/default/objects/Gong__Topic__c/Gong__Topic__c.object-meta.xml
<CustomObject>
    <label>Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>