unpackaged/main/default/objects/Gong__Topic__c/fields/Gong__Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Gong__Duration_Min__c</fullName>
    <formula>IF( Gong__Duration_sec__c &gt;=3600,  TEXT(FLOOR(Gong__Duration_sec__c/ 3600))&amp;&quot;:&quot; , &quot;&quot;)
&amp; 
TEXT(FLOOR(MOD(Gong__Duration_sec__c,3600)/600)) &amp; 
TEXT(FLOOR(MOD(Gong__Duration_sec__c,600)  / 60))
&amp; &quot;:&quot; &amp;
TEXT(FLOOR(MOD(Gong__Duration_sec__c,60)/10)) &amp; 
TEXT(FLOOR(MOD(Gong__Duration_sec__c,10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic Duration (Min.) (Deprecated)</label>
    <type>Text</type>
</CustomField>