unpackaged/main/default/objects/Gong__Topic__c/fields/Gong__Duration_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gong__Duration_Percent__c</fullName>
    <description>duration of the topic out of the entire call</description>
    <label>Topic Duration (Percent) (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>