unpackaged/main/default/objects/Gong__Topic__c/fields/Gong__Duration_sec__c.field-meta.xml
<CustomField>
    <fullName>Gong__Duration_sec__c</fullName>
    <label>Topic Duration (Sec.) (Deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>